pkg/cluster/internal/create/actions/createworker/files/gcp/allow-egress-imds_gnetpol.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-traffic-to-gcp-imds-capg
spec:
  egress:
  - action: Allow
    destination:
      nets:
      - 169.254.169.254/32
    protocol: TCP
  order: 0
  namespaceSelector: kubernetes.io/metadata.name in { 'kube-system', 'capg-system' }
  selector: app in {'gcp-compute-persistent-disk-csi-driver','source-controller'} || cluster.x-k8s.io/provider == 'infrastructure-gcp' || app.kubernetes.io/name == 'gcp-cloud-controller-manager'
  types:
  - Egress
